Fixed header blocking toolbar tabs when the window size wrap the header to a new line.

--- a/Web/Resources/Styles/Custom/Desktop_OE.css
+++ b/Web/Resources/Styles/Custom/Desktop_OE.css
@@ -15,6 +15,9 @@
     position:relative !important;
     float:left;
     width:auto;
+
+    /*height:98% !important;*/
+    height:60px !important;
 }
 
 .banner-images img{
@@ -36,6 +39,7 @@
     left:0px;/*375px;*/
     float:left;
     margin-left:10px;
+    height:50px;
 }
 
 table.banner-text tbody{
@@ -82,11 +86,6 @@ height:400px;
 .splash-paragraph {
     width: 311px;
     font-size: 10px;
-}
-
-.banner-images{
-    /*height:98% !important;*/
-    height:60px;
 }
 
 .ScalebarView {
