--- a/Web/Resources/Styles/Custom/Tablet_OE.css
+++ b/Web/Resources/Styles/Custom/Tablet_OE.css
@@ -22,6 +22,9 @@
     position:relative !important;
     float:left;
     width:auto;
+
+     /*height:98% !important;*/
+    height:60px !important;
 }
 
 .banner-images img{
@@ -91,10 +94,6 @@ height:400px;
     font-size: 10px;
 }
 
-.banner-images{
-    height:50px;
-    /*width:50px;*/
-}
 
 ul.toolbar-tab-control li {
     display: block;
